# tapkee

./: CMakeLists.txt
include/stichwort/: parameter.hpp
include/tapkee/routines/: pca.hpp
src/cmake/: FindEigen3.cmake
